--- a/AmazonSignupAutomation/test-output/emailable-report.html
+++ b/AmazonSignupAutomation/test-output/emailable-report.html
@@ -8,11 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">4,712</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">25,308</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.web.automation.testcases.TC_001_Testcase1</td><td><a href="#m0">startBrowser</a></td><td rowspan="1">1595455476284</td><td rowspan="1">4679</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.web.automation.testcases.TC_001_Testcase3</td><td><a href="#m0">startBrowser</a></td><td rowspan="1">1595628696797</td><td rowspan="1">2181</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.web.automation.testcases.TC_001_Testcase1</td><td><a href="#m1">startBrowser</a></td><td rowspan="1">1595628679852</td><td rowspan="1">3279</td></tr><tr class="passedodd"><td rowspan="1">org.web.automation.testcases.TC_001_Testcase2</td><td><a href="#m2">startBrowser</a></td><td rowspan="1">1595628688978</td><td rowspan="1">2604</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">org.web.automation.testcases.TC_001_Testcase1#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">org.web.automation.testcases.TC_001_Testcase3#startBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at org.web.automation.testcases.TC_001_Testcase3.startBrowser(TC_001_Testcase3.java:31)
+... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">org.web.automation.testcases.TC_001_Testcase1#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">org.web.automation.testcases.TC_001_Testcase2#startBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
