--- a/AmazonSignupAutomation/test-output/old/Default suite/methods.html
+++ b/AmazonSignupAutomation/test-output/old/Default suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a60e3">  <td>20/07/24 23:07:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFunctions.StartBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase3@5e3a8624]">&gt;&gt;StartBrowser</td> 
-<td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>20/07/24 23:07:06</td>   <td>5868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_Testcase3.startBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase3@5e3a8624]">startBrowser</td> 
-  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>20/07/24 23:07:09</td>   <td>8587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFunctions.CloseBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase3@5e3a8624]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:32:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFunctions.StartBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&gt;&gt;StartBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>20/07/27 19:32:59</td>   <td>6077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_Testcase1.startBrowser(java.lang.String, java.lang.String)[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">startBrowser</td> 
+  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:02</td>   <td>9251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFunctions.CloseBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:02</td>   <td>9397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFunctions.StartBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&gt;&gt;StartBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>20/07/27 19:33:07</td>   <td>14572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_Testcase1.startBrowser(java.lang.String, java.lang.String)[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">startBrowser</td> 
+  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:10</td>   <td>17127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFunctions.CloseBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:10</td>   <td>17341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFunctions.StartBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&gt;&gt;StartBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>20/07/27 19:33:15</td>   <td>22593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_Testcase1.startBrowser(java.lang.String, java.lang.String)[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">startBrowser</td> 
+  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:16</td>   <td>23271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFunctions.CloseBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:16</td>   <td>23422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFunctions.StartBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&gt;&gt;StartBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>20/07/27 19:33:21</td>   <td>28725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_Testcase1.startBrowser(java.lang.String, java.lang.String)[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">startBrowser</td> 
+  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/27 19:33:24</td>   <td>31094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFunctions.CloseBrowser()[pri:0, instance:org.web.automation.testcases.TC_001_Testcase1@5c3bd550]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
 </table>
